<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="180dp"
    android:background="@drawable/side_nav_bg"
    android:orientation="vertical"
    android:padding="16dp">

    <ImageView
        android:id="@+id/profileImageNav"
        android:layout_width="97dp"
        android:layout_height="94dp"
        android:contentDescription="@string/profile_image_description"
        android:paddingTop="5dp"
        android:src="@drawable/ic_menu_login" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nav_header_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nav_header_subtitle"
        android:textColor="#FFFFFF" />

</LinearLayout>