<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/add_recipe"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_editor_absoluteX="0dp"
    app:layout_editor_absoluteY="80dp"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="80dp">

    <ImageView
        android:id="@+id/image_uploaded"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/placeholder"
        android:scaleType="centerCrop"
        android:src="@drawable/image_placeholder"
        app:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/upload_image_btn"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/add_recipe"
        app:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/add_recipe"
        app:layout_constraintTop_creator="1"
        app:layout_constraintTop_toTopOf="@+id/add_recipe"
        app:layout_constraintVertical_bias="0.0"
        app:layout_editor_absoluteX="0dp"
        app:layout_editor_absoluteY="0dp"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <ImageView
        android:id="@+id/upload_image_btn"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/info_background"
        android:clickable="true"
        android:contentDescription="@string/fab_content_description"
        android:focusable="true"
        android:padding="5dp"
        android:src="@drawable/ic_menu_camera"
        app:layout_constraintBottom_creator="0"
        app:layout_constraintBottom_toBottomOf="@+id/add_recipe"
        app:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/add_recipe"
        app:layout_constraintTop_creator="1"
        app:layout_constraintTop_toTopOf="@+id/add_recipe"
        app:layout_constraintVertical_bias="0.19"
        app:layout_editor_absoluteX="359dp"
        app:layout_editor_absoluteY="104dp"
        tools:layout_constraintBottom_creator="0"
        tools:layout_constraintRight_creator="0"
        tools:layout_constraintTop_creator="0"
        tools:layout_editor_absoluteX="359dp"
        tools:layout_editor_absoluteY="104dp" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:text="@string/recipe_title_label"
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/recipe_name_input"
        app:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/add_recipe"
        app:layout_constraintTop_creator="0"
        app:layout_editor_absoluteX="16dp"
        app:layout_editor_absoluteY="140dp"
        tools:layout_constraintLeft_creator="0"
        tools:layout_constraintTop_creator="0" />

    <EditText
        android:id="@+id/prep_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="text"
        android:minHeight="48dp"
        android:text="@string/time_to_prepare_input"
        app:layout_constraintBottom_toTopOf="@+id/settings"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/settings"
        app:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/settings"
        app:layout_constraintStart_toEndOf="@+id/labelBarrier"
        app:layout_constraintTop_creator="1"
        app:layout_constraintTop_toBottomOf="@+id/recipe_name_input"
        app:layout_editor_absoluteX="73dp"
        app:layout_editor_absoluteY="176dp"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="0" />

    <TextView
        android:id="@+id/cameraLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:labelFor="@+id/prep_time"
        android:text="@string/time"
        app:layout_constraintBaseline_creator="1"
        app:layout_constraintBaseline_toBaselineOf="@+id/prep_time"
        app:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/add_recipe"
        app:layout_editor_absoluteX="16dp"
        app:layout_editor_absoluteY="189dp"
        tools:layout_constraintBaseline_creator="0"
        tools:layout_constraintLeft_creator="0"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="189dp" />

    <TextView
        android:id="@+id/settingsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:labelFor="@+id/settings"
        android:text="@string/portions"
        app:layout_constraintBaseline_creator="1"
        app:layout_constraintBaseline_toBaselineOf="@+id/settings"
        app:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/add_recipe"
        app:layout_editor_absoluteX="16dp"
        app:layout_editor_absoluteY="238dp"
        tools:layout_constraintBaseline_creator="0"
        tools:layout_constraintLeft_creator="0"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="238dp" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/labelBarrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="end"
        app:constraint_referenced_ids="cameraLabel,settingsLabel" />

    <EditText
        android:id="@+id/settings"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text="@string/portion_amount"
        app:layout_constraintBottom_toTopOf="@+id/description"
        app:layout_constraintLeft_creator="1"
        app:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/description"
        app:layout_constraintStart_toEndOf="@+id/labelBarrier"
        app:layout_constraintTop_creator="1"
        app:layout_constraintTop_toBottomOf="@+id/prep_time"
        app:layout_editor_absoluteX="73dp"
        app:layout_editor_absoluteY="225dp"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="0" />

    <Button
        android:id="@+id/upload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/upload"
        app:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/add_recipe"
        app:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/add_recipe"
        app:layout_editor_absoluteX="307dp"
        app:layout_editor_absoluteY="538dp"
        tools:layout_constraintBottom_creator="0"
        tools:layout_constraintRight_creator="0"
        tools:layout_editor_absoluteX="307dp"
        tools:layout_editor_absoluteY="538dp" />

    <Button
        android:id="@+id/discard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:elevation="0dp"
        android:text="@string/discard"
        app:layout_constraintBaseline_creator="1"
        app:layout_constraintBaseline_toBaselineOf="@+id/upload"
        app:layout_constraintRight_creator="0"
        app:layout_constraintRight_toLeftOf="@+id/upload"
        app:layout_editor_absoluteX="211dp"
        app:layout_editor_absoluteY="538dp"
        tools:layout_constraintBaseline_creator="0"
        tools:layout_constraintRight_creator="0"
        tools:layout_editor_absoluteX="211dp"
        tools:layout_editor_absoluteY="538dp" />

    <EditText
        android:id="@+id/description"
        android:layout_width="400dp"
        android:layout_height="350dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:ellipsize="end"
        android:fadingEdge="vertical"
        android:inputType="textMultiLine"
        android:text="@string/recipe_instructions"
        android:textSize="15sp"
        app:layout_constraintBottom_creator="0"
        app:layout_constraintBottom_toTopOf="@+id/discard"
        app:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/add_recipe"
        app:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/add_recipe"
        app:layout_constraintTop_creator="0"
        app:layout_constraintTop_toBottomOf="@+id/settings"
        app:layout_editor_absoluteX="16dp"
        app:layout_editor_absoluteY="274dp"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <EditText
        android:id="@+id/recipe_name_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/recipe_title_input"
        app:layout_constraintBottom_toTopOf="@+id/prep_time"
        app:layout_constraintTop_toBottomOf="@+id/image_uploaded"
        tools:layout_editor_absoluteX="110dp" />

</androidx.constraintlayout.widget.ConstraintLayout>